log
Thu, Apr 17, 2025 11:55:27 AM: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:57:14: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
 map->buckets = (Pair*)calloc(capacity, sizeof(Pair));
              ^
cc1.exe: all warnings being treated as errors
eeef3b7
Thu, Apr 17, 2025 12:02:27 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:57:14: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
 map->buckets = (Pair*)calloc(capacity, sizeof(Pair));
              ^
cc1.exe: all warnings being treated as errors
11896e9
Thu, Apr 17, 2025 12:10:09 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:57:14: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
 map->buckets = (Pair*)calloc(capacity, sizeof(Pair));
              ^
cc1.exe: all warnings being treated as errors
8e945f6
Thu, Apr 17, 2025 12:11:34 PM: 
 hashmap.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  1|5
total_score: 10/70
bfcbd8c
Thu, Apr 17, 2025  2:51:27 PM: 
 hashmap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:44:25: error: passing argument 2 of 'hash' makes integer from pointer without a cast [-Werror=int-conversion]
     int pos = hash(key, value);
                         ^~~~~
hashmap.c:27:6: note: expected 'long int' but argument is of type 'void *'
 long hash( char * key, long capacity) {
      ^~~~
hashmap.c:49:60: error: comparison between pointer and integer [-Werror]
     if(map->buckets[pos] == NULL || map->buckets[pos]->key == POSNULA){
                                                            ^~
hashmap.c:52:9: error: statement with no effect [-Werror=unused-value]
         for(pos; pos < map->capacity; pos++){
         ^~~
hashmap.c:53:71: error: comparison between pointer and integer [-Werror]
             if(map->buckets[pos + 1] == NULL || map->buckets[pos + 1] == POSNULA){
                                                                       ^~
cc1.exe: all warnings being treated as errors
b759326
Thu, Apr 17, 2025  2:53:39 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:49:60: error: comparison between pointer and integer [-Werror]
     if(map->buckets[pos] == NULL || map->buckets[pos]->key == POSNULA){
                                                            ^~
hashmap.c:52:9: error: statement with no effect [-Werror=unused-value]
         for(pos; pos < map->capacity; pos++){
         ^~~
hashmap.c:53:71: error: comparison between pointer and integer [-Werror]
             if(map->buckets[pos + 1] == NULL || map->buckets[pos + 1] == POSNULA){
                                                                       ^~
cc1.exe: all warnings being treated as errors
f01fd07
Thu, Apr 17, 2025  2:54:39 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:49:60: error: comparison between pointer and integer [-Werror]
     if(map->buckets[pos] == NULL || map->buckets[pos]->key == POSNULA){
                                                            ^~
hashmap.c:52:9: error: statement with no effect [-Werror=unused-value]
         for(pos; pos < map->capacity; pos++){
         ^~~
hashmap.c:53:76: error: comparison between pointer and integer [-Werror]
             if(map->buckets[pos + 1] == NULL || map->buckets[pos + 1]->key == POSNULA){
                                                                            ^~
cc1.exe: all warnings being treated as errors
bce98e2
Thu, Apr 17, 2025  3:07:08 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:49:62: error: comparison between pointer and integer [-Werror]
     if(map->buckets[pos] == NULL || map->buckets[pos]->value == POSNULA){
                                                              ^~
hashmap.c:52:9: error: statement with no effect [-Werror=unused-value]
         for(pos; pos < map->capacity; pos++){
         ^~~
hashmap.c:53:78: error: comparison between pointer and integer [-Werror]
             if(map->buckets[pos + 1] == NULL || map->buckets[pos + 1]->value == POSNULA){
                                                                              ^~
cc1.exe: all warnings being treated as errors
1b76d72
Thu, Apr 17, 2025  3:15:00 PM: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|5
total_score: 20/70
8b3785d
Thu, Apr 17, 2025  3:17:43 PM: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
a6bc2dc
Thu, Apr 17, 2025  3:27:55 PM: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  4|5
total_score: 20/70
b0a74a2
Thu, Apr 17, 2025  3:42:50 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f5c0dde
Thu, Apr 17, 2025  3:43:23 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
8d8f1f2
Thu, Apr 17, 2025  3:45:49 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
fb7159f
Thu, Apr 17, 2025  5:56:09 PM: 
 hashmap.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
 tests:  6|4
total_score: 30/70
80a27eb
Thu, Apr 17, 2025  5:57:22 PM: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
1a36318
Thu, Apr 17, 2025  6:12:43 PM: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:93:83: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
             if(map->buckets[nuevaPos]->key != NULL && (map->buckets[nuevaPos]->key, key) == 0){
                                                                                   ^
cc1.exe: all warnings being treated as errors
13e3a4e
Thu, Apr 17, 2025  6:13:07 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
b560782
Thu, Apr 17, 2025  6:13:56 PM: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
6b36b5a
Thu, Apr 17, 2025  6:17:00 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|3
total_score: 40/70
1117053
Thu, Apr 17, 2025  6:20:01 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
304427d
Thu, Apr 17, 2025  6:39:02 PM: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
50c9394
Thu, Apr 17, 2025  6:39:36 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 40/70
3150b7c
Thu, Apr 17, 2025  6:45:05 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:82:41: error: 'return' with a value, in function returning void [-Werror]
     if(map->buckets[pos] == NULL)return NULL;
                                         ^~~~
hashmap.c:80:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
387b4d3
Thu, Apr 17, 2025  6:45:33 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 40/70
862e138
Thu, Apr 17, 2025  6:48:08 PM: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:88:18: error: unused variable 'nuevaPos' [-Werror=unused-variable]
             long nuevaPos =(pos + j) % map->capacity;
                  ^~~~~~~~
cc1.exe: all warnings being treated as errors
24cd94b
Thu, Apr 17, 2025  6:48:37 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
3f78761
Thu, Apr 17, 2025  6:50:03 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
698c3e3
Thu, Apr 17, 2025  6:52:02 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
df1714d
